--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = text-info
-version = 1.0.0
+version = 1.0.1
 description = Tools to extract useful information from xml text corpora
 long_description = file README.md
 author = Dirk Roorda
@@ -41,6 +41,7 @@ install_requires =
 
 packages = 
     ti
+    ti.kit
     ti.info
     ti.tools
     ti.tools.tei
