--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,6 @@ license = MIT
 classifiers =
     Development Status :: 4 - Beta
     Environment :: Other Environment
-    Framework :: Jupyter
     Intended Audience :: Developers
     Intended Audience :: Education
     Intended Audience :: Science/Research
@@ -36,6 +35,7 @@ include_package_data = True
 python_requires = >=3.13.0
 install_requires =
     wheel
+    pyyaml
     lxml
     python-gitlab
 
