--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = text-info
-version = 1.0.2
+version = 1.1.0
 description = Tools to extract useful information from xml text corpora
 long_description = file README.md
 author = Dirk Roorda
@@ -46,6 +46,12 @@ packages =
     ti.tools
     ti.tools.tei
     ti.tools.trang
+    ti.cli
+
+[options.entry_points]
+console_scripts =
+    generate-manifests = ti.cli.generate_manifests:main
+    validate-tei = ti.cli.validate_tei:main
 
 [options.exclude_package_data]
 * =
