--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 1.0.3
 description = Tools to extract useful information from xml text corpora
 long_description = file README.md
 author = Dirk Roorda
-author_email = dirk.roorda@di.huc.knaw.nl
+author_email = droorda.it@icloud.com
 url = https://github.com/annotation/text-info
 license = MIT
 
