--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ packages =
 console_scripts =
     generate-manifests = ti.cli.generate_manifests:main
     validate-tei = ti.cli.validate_tei:main
+    merge-intro-texts = ti.cli.merge_intro_texts:main
 
 [options.exclude_package_data]
 * =
