cli: added generate-scaninfo

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ console_scripts =
     generate-manifests = ti.cli.generate_manifests:main
     validate-tei = ti.cli.validate_tei:main
     merge-intro-texts = ti.cli.merge_intro_texts:main
+    generate-scaninfo = ti.cli.generate_scaninfo:main
 
 [options.exclude_package_data]
 * =
